--- a/src/pages/admin/user/userAdmin.scss
+++ b/src/pages/admin/user/userAdmin.scss
@@ -1,7 +1,7 @@
-.list {
+.list_table {
     display: flex;
     width: 100%;
-    .listContainer {
+    .listContainer_table {
       flex: 6;
     }
   }
