--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -40,6 +40,7 @@
 	cursor: pointer;
 }
 .headerSearch {
+	box-sizing: content-box;
 	height: 30px;
 	background-color: white;
 	border: 3px solid #febb02;
