--- a/src/layout/navbar/css/navbar.css
+++ b/src/layout/navbar/css/navbar.css
@@ -1,3 +1,4 @@
+
 /* * {
   box-sizing: border-box;
   margin: 0;
@@ -63,7 +64,6 @@
 .nav-item:hover {
   border-bottom: 2px solid #09bef0;
 }
-
 .nav-links {
   color: #fff;
   display: flex;
@@ -84,6 +84,68 @@
 .menu-icon {
   display: none;
 }
+
+.profile {
+  position: relative;
+  display: inline-block;
+}
+
+.profile-content {
+  margin-top: 22px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.profile-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.profile-content a:hover {background-color: #f1f1f1}
+
+.profile:hover .profile-content {
+  display: block;
+}
+
+.noti {
+  position: relative;
+  display: inline-block;
+}
+
+.noti-content {
+  margin-top: 27px;
+  right: -500%;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 400px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.noti:hover .noti-content {
+  display: block;
+}
+.noti-content h1{
+  font-weight: 800;
+  padding: 10px 0;
+}
+.noti-item{
+  background-color: gray;
+  padding: 0;
+  margin: 10px 0;
+  font-weight: 500;
+}
+.noti-item:hover {
+  background-color: #003580c4;
+  color: white;
+}
+
 
 @media screen and (max-width: 960px) {
   .NavbarItems {
