--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -65,6 +65,9 @@
             width: 50px;
           }
         }
+        .list-select{
+          margin-bottom: 10px;
+        }
       }
   
       > button {
@@ -82,3 +85,4 @@
       flex: 3;
     }
   }
+
