--- a/src/pages/profile/profilePage.css
+++ b/src/pages/profile/profilePage.css
@@ -36,17 +36,8 @@
 .profile_content h4{
     font-size: 16px;
 }
-.profile_content a{
-    font-size: 22px;
-    font-weight: 700;
-    text-decoration: underline;
-    display: block;
-}
 .info_item{
     margin-top: 30px;
-}
-.action a{
-    margin-top: 50px;
 }
 .profile_item path{
     color: rgb(226, 21, 89);
@@ -57,4 +48,22 @@
 .profile_item p{
     padding: 20px 0px 15px 0px;
     border-bottom: solid 1px black;
+}
+.action button{
+    background-color: transparent;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: underline;
+    display: block;
+    margin-top: 50px;
+}
+.info_item .info_show input{
+    margin: 10px 0;
+}
+.info_item .info_show button{
+    padding: 7px 22px;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    font-weight: 600;
 }
