--- a/src/pages/payment/confirmationPaymentPage.css
+++ b/src/pages/payment/confirmationPaymentPage.css
@@ -127,3 +127,20 @@
     margin-top: 20px;
     margin-left: 66px;
 }
+
+.date-picker-container {
+    position: relative;
+  }
+  
+  .date-picker-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background-color: rgba(0, 0, 0, 0.5); /* Một lớp nền mờ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
