--- a/src/pages/ownerHotel/manager/ManagerHotel.css
+++ b/src/pages/ownerHotel/manager/ManagerHotel.css
@@ -1,5 +1,7 @@
-*{
-    box-sizing: border-box;
+.container{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box !important;
 }
 .room{
     width: 80%;
@@ -40,12 +42,21 @@
     border: solid 2px black;
     border-radius: 10px;
 }
+.room_left{
+    width: 70%;
+    overflow-wrap: break-word;
+}
 .room_right button{
     font-size: 20px;
     margin: 10px 0;
     font-weight: 600;
     background-color: transparent;
     text-decoration: underline;
+}
+.room_item_add{
+    height: 88%;
+    width: 20%;
+    margin-top: 10px;
 }
 .new_room_item{
     border-radius: 10px;
@@ -55,5 +66,4 @@
     height: 100%;
     width: 100%;
     justify-content: center;
-    /* margin-left: 20; */
 }
