--- a/src/pages/payment/confirmationPaymentPage.css
+++ b/src/pages/payment/confirmationPaymentPage.css
@@ -78,7 +78,8 @@
     top: 100px;
     right: 14%;
     width: 35%;
-    margin: 0 auto;
+    margin-top: 10%;
+    /* margin: 0 auto; */
     border-radius: 20px;
     border: solid 2px rgba(0, 0, 0, 0.493);
     padding: 20px 0;
