--- a/src/layout/sidebarHotel/SidebarHotel.css
+++ b/src/layout/sidebarHotel/SidebarHotel.css
@@ -1,8 +1,8 @@
 .cd-box {
     position: fixed;
-    top: 30%;
+    top: 8%;
     left: 0;
-    height: 270px;
+    height: 100vh;
     width: 100px;
     background-color: rgba(134, 134, 134, 0.986);
     border-radius: 10px;
