--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,9 @@ textarea{
 textarea{
     height: 140px;
 }
-button{
+/* button{
     @apply bg-gray-300;
-}
+} */
 button.primary{
     background-color: #F5385D;
     @apply bg-primary p-2 w-full text-white rounded-2xl;
